syntax = "proto3";

import "google/protobuf/wrappers.proto";
package com.coralogixapis.alerts.v3;

message CoralogixLogMetadata {
  google.protobuf.StringValue application_name = 1;
  google.protobuf.StringValue subsystem_name = 2;
  google.protobuf.StringValue severity = 3;
}
